2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3run.cc (jtag3::getProgramCounter): Add some ugly hack
	to work around problems single-stepping a SLEEP instruction
	* src/jtag3rw.cc (jtag3::jtagRead): (Dito.)

2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3io.cc (jtag3::setDeviceDescriptor): avoid an overly
	aggressive compiler optimization on a parameter struct d3

2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2rw.cc (jtag2::jtagRead): delete response before throwing
	out
	* src/jtag3rw.cc (jtag3::jtagRead): (Dito.)

2013-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtagrw.cc (jtag1::jtagRead): When attempting to read more than
	256 bytes, throw an exception rather than returning a nonsensical
	value.
	* src/jtag3io.cc (jtag3::startJtagLink): Fix an off-by-one error
	when preparing the AVR sign-on command.
	* src/jtag2usb.cc (opendev): fix devnamecopy deletion.

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3io.cc (initJtagOnChipDebugging): reenable CMD3_START_DEBUG
	for Xmega (even over JTAG)

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Document the JTAGICE3 support.
	* src/main.cc (usage): (Dito.)

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc (makeSocket): Be a little more verbose if bind()
	failed with EADDRINUSE.

2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtaggeneric.cc: Remove enableProgramming()/disableProgramming()
	calls in fuse handling; the respective backend jtagRead()/jtagWrite()
	functions are in charge of deciding whether they need a programming
	mode or not
	* src/jtag3io.cc: fix device ID recognition when operating on
	debugWIRE targets; activate the #ifdef'ed out jtagActivateOcdenFuse
	call; only call CMD3_START_DEBUG for debugWIRE; at the end of
	initialization, attempt resetProgram() a second time if the first
	time failed (appears to be needed after just activating the OCDEN
	fuse)
